# note_board

./: .gitignore  Dockerfile  README.md  docker-compose.yml  logging.conf  pyproject.toml
src/: main.py
src/app/: db.py
src/app/api/: board.py  models.py  note.py  repositories.py
tests/: conftest.py  test_boards.py  test_main.py  test_notes.py
