[tool.poetry]
name = "notes"
version = "0.1.0"
description = "API service for note management"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.96.0"}
databases = {extras = ["asyncpg"], version = "^0.7.0"}
psycopg2-binary = "^2.9.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
